Fixed styling on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -319,7 +319,7 @@ footer>p {
         display: none;
     }
 
-    .quarter {
+    article {
         width: 100% !important;
     }
 
